Revision history for DBD::Oracle

{{$NEXT}}
 [BUG FIXES]

 - Fixed RT76695 - offset passed to ora_fetch_scroll should not affect
   normal fetches (Martin J. Evans)

 - Fixed part of RT76410 - fetch after fetch absolute always returns
   the same row (Martin J. Evans);

 [MISCELLANEOUS]

 - minor change to confusing debug output for input parameters
   (Martin J. Evans)

1.43_00   2012-03-30

 [BUG FIXES]
 - Applied patch from Rafael Kitover (Caelum) to column_info to handle
   DEFAULT columns greater in length than the DBI default of 80. The
   DEFAULT column is a long and it is a PITA to have to set
   LongReadLen which you can only do on a connection handle in
   DBD::Oracle. The default maximum size is now 1Mb; above that you
   will still have to set LongReadLen (Martin J. Evans)

 - Fixed 70meta and rt74753-utf8-encoded to not die if you cannot
   connect to Oracle or you cannot install from CPAN if you have not
   set up a valid Oracle connection.

 - Fixed 75163. Bfile lobs were not being opened before fetching if
   ora_auto_lobs was disabled (Martin J. Evans).

   Note: this has a minor impact on non bfile lobs when ora_auto_lobs
   is not in force as an additional call to OCILobFileIsOpen will be
   made.

 - Removed all DBIS usage fixing and speeding up threaded
   Perls (Martin J. Evans).

 - Minor fix to avoid use of uninitialised variable in 31lob.t (Martin J. Evans)

 [DOCUMENTATION]
 - clarification of when StrictlyTyped/DiscardString can be used and
   LongReadLen (Martin J. Evans)

 - Documented the 3rd type of placeholder and rewrote the existing
   pod for placeholders (Martin J. Evans).

1.42      2012-03-13
 - skip rt74753-utf8-encoded.t if db is not unicode

1.40      2012-03-08
 - promote 1.39_00 to official release

1.39_00   2012-02-24

 [BUG FIXES]
 - TAF supports now conditional to presence of OCI_ATTR_TAF_ENABLED
    [RT73798]
 - detect broken Win32::TieRegistry (patch by Rafael Kitover (Caelum))
    [RT74544]